[package]
name = "rtlib"
version = "0.2.0"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENCE"
]

homepage = "https://github.com/mario007/rtlib"
description = "Ray Tracing Library"
repository = "https://github.com/mario007/rtlib"
keywords = [
    "ray",
    "path"
]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
